k8s/deployments.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-mongodb
  labels:
    app: go-mongodb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: go-mongodb
  template:
    metadata:
      labels:
        app: go-mongodb
    spec:
      containers:
      - name: go-mongodb
        image: jmunozal/go-mongodb:1.3
        ports:
        - containerPort: 8080
