k8s/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongodb-service
spec:
  selector:
    app: go-mongodb
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: LoadBalancer
