k8s/egress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: multi-port-egress
  namespace: default
spec:
  podSelector:
    matchLabels:
      role: go-mongodb
  policyTypes:
  - Egress
  egress:
  - to:
    - ipBlock:
        cidr: 172.0.0.0/8
    ports:
    - protocol: TCP
      port: 27017
